# bsen

./: README.md  pyproject.toml
architecture/: architecture.md
src/: main.py
