[tool.poetry]
name = "bsen"
version = "0.1.0"
description = "Bsen is a bookmarks extentiosn for Chromium/Chrome/Edge"
authors = ["hong <j50508@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
